--- a/views/user-schemes.ejs
+++ b/views/user-schemes.ejs
@@ -20,14 +20,6 @@
          <div class="w-full md:w-4/5 bg-gray-100">
             <div class="container bg-gray-100 pt-16 px-6">
              <!-- Serach icon -->
-              <div class="Serach relative text-gray-600">
-                <input type="search" name="search" placeholder="Search" class="bg-white h-12 px-5 pr-10 w-full border-2 rounded-full text-sm focus:outline-none">
-                <button type="submit" class="absolute right-0 top-0 mt-3 mr-4">
-                  <svg class="h-6 w-6 fill-current" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve" width="512px" height="512px">
-                    <path d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z"/>
-                  </svg>
-                </button>
-              </div>
               <!-- Grid for cards  -->
               <div class="flex flex-wrap" id="card">
 
@@ -73,8 +65,8 @@
             <div class="md:relative mx-auto lg:float-right lg:px-6">
                <ul class="list-reset flex flex-row md:flex-col text-center md:text-left">
                   <li class="mr-3 flex-1">
-                     <a href="#" class="block py-1 md:py-3 pl-1 align-middle text-white no-underline hover:text-white border-b-2 border-pink-600">
-                     <i class="fas fa-home pr-0 md:pr-3 text-pink-500"></i><span class="pb-1 md:pb-0 text-xs md:text-base text-white md:font-bold block md:inline-block">Home</span>
+                     <a href="/user/history" class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
+                     <i class="fas fa-home pr-0 md:pr-3"></i><span class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">History</span>
                      </a>
                   </li>
                   <li class="mr-3 flex-1">
@@ -88,8 +80,8 @@
                      </a>
                   </li>
                   <li class="mr-3 flex-1">
-                     <a href="/user/profile/" class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
-                     <i class="fas fa-id-badge pr-0 md:pr-3"></i><span class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Schemes</span>
+                     <a href="/user/schemes" class="block py-1 md:py-3 pl-1 align-middle text-white no-underline hover:text-white border-b-2 border-pink-600">
+                     <i class="fas fa-poll pr-0 md:pr-3 text-pink-500"></i><span class="pb-1 md:pb-0 text-xs md:text-base text-white md:font-bold block md:inline-block">Schemes</span>
                      </a>
                   </li>
                   <li class="mr-3 flex-1">
